# protein-domains

./: protein-domains.cabal
Data/Bio/PPI/: Instances.hs  PfamParser.hs  ProteinDomains.hs  ProteinSpecies.hs  Types.hs
test/: Test.hs  test-pfam.cleaned  test.pfam
