name: protein-domains
version: 0.1
stability: alpha
synopsis: Releate proteins to domains
category: Bioinformatics, Data Structures
license: BSD3
author: Badi' Abdul-Wahid
maintainer: abdulwahidc@gmail.com
build-type: Simple
cabal-version: >= 1.6


Library
    build-depends:
        base >= 4.0
    exposed-modules
        Data.Bio.PPI.Types
        Data.Bio.PPI.ProteinDomains
