name: protein-domains
version: 0.1
stability: alpha
synopsis: Relate proteins to domains
category: Bioinformatics, Data Structures
license: BSD3
author: Badi' Abdul-Wahid
maintainer: abdulwahidc@gmail.com
build-type: Simple
cabal-version: >= 1.2


Library
    build-depends:
        base >= 4.0
      , parsec >= 3.0
      , FromContainer >= 1.1
    exposed-modules:
        Data.Bio.PPI.Types
        Data.Bio.PPI.ProteinDomains
        Data.Bio.PPI.ProteinSpecies
        Data.Bio.PPI.PfamParser
